--- a/docker-maven-plugin/pom.xml
+++ b/docker-maven-plugin/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>basic</module>
+        <module>external-config</module>
     </modules>
 
 </project>
